build/log/idf_py_stderr_output_74313
/home/pi/remoteLED/main/remoteLED.c: In function 'get_auth_token':
/home/pi/remoteLED/main/remoteLED.c:155:1: error: expected declaration or statement at end of input
  155 | }
      | ^
/home/pi/remoteLED/main/remoteLED.c: At top level:
/home/pi/remoteLED/main/remoteLED.c:144:6: warning: 'app_main' defined but not used [-Wunused-function]
  144 | void app_main(void) {
      |      ^~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:82: esp-idf/main/CMakeFiles/__idf_main.dir/remoteLED.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6157: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
